# gotpl

./: Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs
src/go_ffi/: ffi.go  go.mod
