[package]
name = "gotpl"
version = "0.2.6"
edition = "2021"

authors = ["moyan"]
description = "A Rust library providing full Go template (text/template and html/template) support via FFI."
license = "MIT"
repository = "https://github.com/moyanj/gotpl"
homepage = "https://github.com/moyanj/gotpl"
keywords = ["go", "template", "ffi", "html", "text"]
categories = ["template-engine", "web-programming", "external-ffi-bindings"]

[dependencies]
bindgen = "0.72.1"
serde = { version = "^1.0.225", features = ["derive"] }
serde_json = "^1.0.145"

[build-dependencies]
bindgen = "0.72.1"
